--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Adventure: Immerse yourself in an AI-driven, procedurally-generated tabletop RPG experience." />
 
-    <title>Adventure | AI-enhanced Virtual Tabletop</title>
+    <title>Adventure</title>
 
     <!-- Open Graph Meta Tags (Social Media Sharing) -->
     <meta property="og:title" content="Adventure | AI-enhanced Virtual Tabletop" />
