--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Adventure: Immerse yourself in an AI-driven, procedurally-generated tabletop RPG experience." />
     <title>Adventure</title>
-    <script type="module" crossorigin src="/assets/main-BYuHJoYp.js"></script>
   </head>
   <body class="bg-stone-900 text-white">
     <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
