fix: clean working Tailwind + Vite setup, removed postcss

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Adventure: Immerse yourself in an AI-driven, procedurally-generated tabletop RPG experience." />
     <title>Adventure</title>
-    <script type="module" crossorigin src="/assets/main-BYuHJoYp.js"></script>
+    <script type="module" crossorigin src="/assets/main-C2r-c8XB.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-_hOTL2KY.css">
   </head>
   <body class="bg-stone-900 text-white">
     <div id="root"></div>
